--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/adapter-mariadb": "^7.2.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.3",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.554.0",
+    "mysql2": "^3.16.0",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
@@ -34,6 +36,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.2.0",
     "@prisma/client": "5.22.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
